+ AppConfigRepositoryCustom.updateAll(List<AppConfig> appConfigs) + clean.install.skip-tests.sh using apps/opt/tomcat-work using /fast-disk